implemented Kafca config