@@ -8,9 +8,13 @@ import com.bfsforum.postservice.dto.kafka.PostsEnrichmentResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.kafka.annotation.KafkaListener;
+import org.springframework.kafka.support.Acknowledgment;
+import org.springframework.messaging.handler.annotation.Header;
 import org.springframework.messaging.handler.annotation.SendTo;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -30,10 +34,20 @@ public class PostEnrichmentListener {
 	 * monitor the post request
 	 * return  info
 	 * */
-	@KafkaListener(topics = "posts-enrichment-request")
-	@SendTo("posts-enrichment-response")
-	public PostsEnrichmentResponse handlePostsEnrichmentRequest(PostsEnrichmentRequest request) {
-		log.info("Received posts enrichment request: requestId={}, postId={}", request.getRequestId(), request.getPostIds());
+	@KafkaListener(
+			topics = "${app.kafka.topics.posts-enrichment-request:posts-enrichment-request}",
+			groupId = "${spring.kafka.consumer.group-id:post-service-group}",
+			containerFactory = "enrichmentRequestListenerFactory"
+	)
+	@SendTo("${app.kafka.topics.posts-enrichment-response:posts-enrichment-response}")
+	public PostsEnrichmentResponse handlePostsEnrichmentRequest(
+			PostsEnrichmentRequest request,
+			Acknowledgment ack,
+			@Header("kafka_receivedTopic") String topic,
+			@Header("kafka_receivedPartition") int partition,
+			@Header("kafka_offset") long offset) {
+		log.info("Received posts enrichment request: requestId={}, postIds={}, topic={}, partition={}, offset={}",
+				request.getRequestId(), request.getPostIds(), topic, partition, offset);
 		
 		try {
 			// search posts by postId
@@ -44,10 +58,14 @@ public class PostEnrichmentListener {
 					.map(this::converToPostDTO)
 					.collect(Collectors.toList());
 			
-			PostsEnrichmentResponse response = new PostsEnrichmentResponse(
-					request.getRequestId(),
-					postDTOs
-			);
+			PostsEnrichmentResponse response = PostsEnrichmentResponse.builder()
+					.requestId(request.getRequestId())
+					.posts(postDTOs)
+					.timestamp(LocalDateTime.now())
+					.build();
+			
+			// confirm message
+			ack.acknowledge();
 			
 			log.info("Sending posts enrichment response: requestId={}, postCount={}", request.getRequestId(), postDTOs.size());
 			
@@ -55,7 +73,15 @@ public class PostEnrichmentListener {
 		} catch (Exception e){
 			log.error("Error processing posts enrichment request: requestId={}", request.getRequestId(), e);
 			
-			return new PostsEnrichmentResponse(request.getRequestId(), List.of());
+			PostsEnrichmentResponse errorResponse = PostsEnrichmentResponse.builder()
+					.requestId(request.getRequestId())
+					.posts(Collections.emptyList())
+					.timestamp(LocalDateTime.now())
+					.error("Failed to process request: " + e.getMessage())
+					.build();
+			
+			ack.acknowledge();
+			return errorResponse;
 		}
 	}
 	
